--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,15 @@ span{
      margin-left: 5%; 
      margin-top: -43px;
 }
+.btn-group{
+    float: right;
+    margin-right: 15%;
+    margin-top: 6%;
+}
+.temp-contents{
+    font-size: 180%;
+}
+body{
+    background-image: url("images.jpg");
+    background-color: blueviolet;
+}
